[gd_scene load_steps=21 format=3 uid="uid://diug36y0he1qx"]

[ext_resource type="PackedScene" uid="uid://n83wlhmmsu3j" path="res://core/systems/input/input_manager.tscn" id="1_34t85"]
[ext_resource type="Script" path="res://core/ui/cardui/cardui.gd" id="1_f8851"]
[ext_resource type="Theme" uid="uid://bko0q7gp1hwjp" path="res://assets/themes/dracula.tres" id="1_sbg4l"]
[ext_resource type="PackedScene" uid="uid://dlegwm7jqfe2i" path="res://core/systems/boxart/boxart_local.tscn" id="2_600i0"]
[ext_resource type="PackedScene" uid="uid://ch6qw6obetalo" path="res://core/systems/library/library_desktop.tscn" id="3_68bes"]
[ext_resource type="PackedScene" uid="uid://cbboox5bujlx1" path="res://core/systems/launcher/launch_manager.tscn" id="4_tgw75"]
[ext_resource type="PackedScene" uid="uid://uam46dtvo2yh" path="res://core/systems/plugin/plugin_manager.tscn" id="5_dv70s"]
[ext_resource type="PackedScene" uid="uid://d7lts0p8kgtt" path="res://core/ui/cardui/home/cardui_home.tscn" id="6_12lhu"]
[ext_resource type="PackedScene" uid="uid://cir6gksabfpi4" path="res://core/ui/cardui/launch/game_launch_menu.tscn" id="9_m34in"]
[ext_resource type="PackedScene" uid="uid://lper3pd72fq3" path="res://core/ui/cardui/navigation/search_bar_menu.tscn" id="10_7bl6b"]
[ext_resource type="PackedScene" uid="uid://by0i08fw1fwty" path="res://core/ui/cardui/navigation/top_button_menu.tscn" id="11_x7ns7"]
[ext_resource type="PackedScene" uid="uid://40v4c0khrlfm" path="res://core/ui/cardui/navigation/context_bar_menu.tscn" id="12_bstc8"]
[ext_resource type="PackedScene" uid="uid://dwlifno8asacn" path="res://core/ui/cardui/main-menu/main_menu.tscn" id="13_46tck"]
[ext_resource type="PackedScene" uid="uid://xg0f88hltny1" path="res://core/ui/cardui/qam/quick_access_menu.tscn" id="14_lsaok"]
[ext_resource type="VideoStream" path="res://assets/videos/boot.ogv" id="21_s3peg"]
[ext_resource type="PackedScene" uid="uid://g4o1uuo0hlbv" path="res://core/ui/menu/game/game_loading.tscn" id="22_morxu"]

[sub_resource type="Gradient" id="Gradient_d65wo"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.734982)
colors = PackedColorArray(0.0235294, 0.027451, 0.0313726, 1, 0.0245151, 0.0260339, 0.03125, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_y4ncd"]
gradient = SubResource("Gradient_d65wo")

[sub_resource type="Animation" id="Animation_vgwwd"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_06k1n"]
_data = {
"fade": SubResource("Animation_vgwwd")
}

[node name="CardUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sbg4l")
script = ExtResource("1_f8851")

[node name="InputManager" parent="." instance=ExtResource("1_34t85")]

[node name="BoxArtLocal" parent="." instance=ExtResource("2_600i0")]

[node name="DesktopLibrary" parent="." instance=ExtResource("3_68bes")]

[node name="LaunchManager" parent="." instance=ExtResource("4_tgw75")]

[node name="PluginManager" parent="." instance=ExtResource("5_dv70s")]

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"LightPanel"

[node name="Content" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HomeMenu" type="MarginContainer" parent="Content"]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="CardUIHome" parent="Content/HomeMenu" instance=ExtResource("6_12lhu")]
layout_mode = 2

[node name="GameLaunchMenu" parent="Content/HomeMenu" instance=ExtResource("9_m34in")]
layout_mode = 2

[node name="TopMargin" type="MarginContainer" parent="Content"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30

[node name="SearchBarMenu" parent="Content/TopMargin" instance=ExtResource("10_7bl6b")]
layout_mode = 2

[node name="ButtonMenu" parent="Content/TopMargin" instance=ExtResource("11_x7ns7")]
layout_mode = 2

[node name="BottomMargin" type="MarginContainer" parent="Content"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="ContextBar" parent="Content/BottomMargin" instance=ExtResource("12_bstc8")]
layout_mode = 2

[node name="MenuContainer" type="MarginContainer" parent="Content"]
layout_mode = 2
theme_override_constants/margin_bottom = 70

[node name="MainMenu" parent="Content/MenuContainer" instance=ExtResource("13_46tck")]
layout_mode = 2

[node name="QuickAccessMenu" parent="Content/MenuContainer" instance=ExtResource("14_lsaok")]
layout_mode = 2

[node name="FadeTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_y4ncd")

[node name="FadeTransitionPlayer" type="AnimationPlayer" parent="FadeTexture"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_06k1n")
}

[node name="GameLoading" parent="." instance=ExtResource("22_morxu")]
visible = false
layout_mode = 1

[node name="BootVideoPlayer" type="VideoStreamPlayer" parent="."]
unique_name_in_owner = true
z_index = 20
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("21_s3peg")
autoplay = true

[node name="PowerTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5
one_shot = true
